# RGBD-Segmenter

./: CMakeLists.txt  README.txt  opencv.cmake  v4r.cmake
v4r/: BoundaryRelations.cpp  BoundaryRelations.h  CMakeLists.txt  Capture.cpp  Capture.h  ClusterNormalsToPlanes.cc  ClusterNormalsToPlanes.hh  ColorHistogram3D.cpp  ColorHistogram3D.h  ContourDetector.cpp  ContourDetector.h  Device.cpp  Device.h  FileSystem.cc  FileSystem.hh  Graph.cpp  Graph.h  GraphCut.cpp  GraphCut.h  Kinect.cpp  Kinect.h  KinectConfig.xml  KinectData.h  PPlane.h  Relation.h  SVMPredictorSingle.cpp  SVMPredictorSingle.h  SegmenterLight.cpp  SegmenterLight.h  SegmenterLightTest.cpp  SegmenterLightTest.h  StructuralRelationsLight.cpp  StructuralRelationsLight.h  SurfaceModel.hpp  SurfaceModeling.cc  SurfaceModeling.hh  Texture.cpp  Texture.h  Utils.cc  Utils.hh  (+4 more)
v4r/TomGine/: CMakeLists.txt  GLDCWindow.cpp  GLDCWindowGetEvent.cpp  GLEvent.h  GLInput.h  GLWindow.h  GLXWindow.cpp  GLXWindowGetEvent.cpp  PlyStructure.h  README  headers.h  tgCamera.cpp  tgCamera.h  tgCollission.cpp  tgCollission.h  tgEngine.cpp  tgEngine.h  tgError.cpp  tgError.h  tgErrorMetric.cpp  tgErrorMetric.h  tgFont.cpp  tgFont.h  tgFrameBufferObject.cpp  tgFrameBufferObject.h  tgFrustum.cpp  tgFrustum.h  tgLight.cpp  tgLight.h  tgMaterial.cpp  tgMaterial.h  tgMathlib.cpp  tgMathlib.h  tgModel.cpp  tgModel.h  tgModelLoader.cpp  tgModelLoader.h  tgPlot2D.cpp  tgPlot2D.h  tgPose.cpp  (+18 more)
v4r/model/: PP-Trainingsset.txt.scaled.model  param.txt
